tests/e2e/negative/n0010_missing_return.cryo
// @test: missing_return
// @expect: compile_fail
// @mode: raw
// @error_code: E0403
// @description: Function missing return statement should fail
// @tags: functions, errors

namespace NegMissingReturn;

function compute(x: int) -> int {
    const y: int = x + 1;
}

function main() -> int {
    const result: int = compute(5);
    return 0;
}
